[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Controles2D/Testes/OpcoesSideScrolling.gd" type="Script" id=1]

[node name="OpcoesSideScrolling" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -244.0
margin_top = 55.0
margin_right = -204.0
margin_bottom = 95.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = 4.0
margin_right = -68.0
margin_bottom = 4.0
rect_scale = Vector2( 7.10566, 4.25792 )
color = Color( 1, 1, 1, 0.176471 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = -59.0
margin_top = 9.0
margin_right = 139.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( -205, 58 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 233.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 74.0
margin_bottom = 15.0
text = "Velocidade:"

[node name="Velocidade" type="HSlider" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 78.0
margin_right = 198.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 100.0
max_value = 600.0
step = 10.0
value = 300.0

[node name="LabelVelocidade" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 202.0
margin_top = 1.0
margin_right = 202.0
margin_bottom = 15.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 20.0
margin_right = 233.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_top = 1.0
margin_right = 74.0
margin_bottom = 15.0
text = "Aceleração:"

[node name="Aceleracao" type="HSlider" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 198.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0

[node name="LabelAceleracao" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 202.0
margin_top = 1.0
margin_right = 202.0
margin_bottom = 15.0

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 40.0
margin_right = 233.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "Desaceleração:"

[node name="Desaceleracao" type="HSlider" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 101.0
margin_right = 221.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
min_value = 10.0
max_value = 200.0
step = 10.0
value = 50.0

[node name="LabelDesaceleracao" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 225.0
margin_top = 1.0
margin_right = 225.0
margin_bottom = 15.0

[node name="HBoxContainer12" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 60.0
margin_right = 233.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer12"]
margin_top = 13.0
margin_right = 96.0
margin_bottom = 27.0
text = "Controle no Ar:"

[node name="ControleNoAr" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer12"]
margin_left = 100.0
margin_right = 176.0
margin_bottom = 40.0
focus_mode = 0

[node name="HBoxContainer10" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 104.0
margin_right = 233.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer10"]
margin_top = 1.0
margin_right = 105.0
margin_bottom = 15.0
text = "Mult. Gravidade:"

[node name="MultGravidadr" type="HSlider" parent="Control/VBoxContainer/HBoxContainer10"]
margin_left = 109.0
margin_right = 229.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 16 )
focus_mode = 0
max_value = 2.0
step = 0.1
value = 1.1

[node name="LabelMultGravidade" type="Label" parent="Control/VBoxContainer/HBoxContainer10"]
margin_left = 233.0
margin_top = 1.0
margin_right = 233.0
margin_bottom = 15.0

[node name="HBoxContainer11" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 124.0
margin_right = 233.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer11"]
margin_top = 13.0
margin_right = 108.0
margin_bottom = 27.0
text = "Tratar Gravidade:"

[node name="TratarGravidade" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer11"]
margin_left = 112.0
margin_right = 188.0
margin_bottom = 40.0
focus_mode = 0

[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer3/Velocidade" to="." method="_on_Velocidade_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer4/Aceleracao" to="." method="_on_Aceleracao_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer5/Desaceleracao" to="." method="_on_Desaceleracao_value_changed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer12/ControleNoAr" to="." method="_on_ControleNoAr_toggled"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer10/MultGravidadr" to="." method="_on_MultGravidadr_value_changed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer11/TratarGravidade" to="." method="_on_TratarGravidade_toggled"]
